# ClashRelay

./: AGENTS.md  CLAUDE.md  Dockerfile  FEATURES.md  README.md  REVIEW_FINDINGS_2026-04-28.md  REVIEW_FINDINGS_SECOND_PASS_2026-04-28.md  SECURITY_FIXES_2026-04-29.md  defaulturles.md  index.html  package-lock.json  package.json  prd.md  proxy-server.js  relaybox-merged-us-jp.benchmark.json  relaybox-merged-us-jp.summary.json  relaybox-merged-us-jp.yaml  vite.config.js  配置连接.txt
.claude/: index.json  settings.local.json
.playwright-cli/: NodeQualityResult.md  page-2026-04-29T03-27-24-580Z.yml  page-2026-04-29T03-28-30-686Z.yml  page-2026-04-29T03-29-32-747Z.yml  page-2026-04-29T03-29-52-256Z.yml  page-2026-04-29T03-30-14-878Z.yml  page-2026-04-29T03-30-28-743Z.yml  page-2026-04-29T10-50-43-067Z.yml  page-2026-04-29T10-53-47-892Z.yml  page-2026-04-29T10-54-04-240Z.yml  page-2026-04-29T10-54-15-041Z.yml  page-2026-04-29T10-54-33-454Z.yml  page-2026-04-29T10-54-49-900Z.yml  page-2026-04-29T10-55-18-850Z.yml
.playwright-mcp/: page-2026-04-30T05-04-32-966Z.yml  page-2026-04-30T06-25-40-922Z.yml  page-2026-04-30T06-43-05-793Z.yml
assets/: OnboardingWizard-BCwAYMFF.css  OnboardingWizard-BHzGAh7n.js  OnboardingWizard-BQG5dJPV.js  OnboardingWizard-CDJ7KK01.js  OnboardingWizard-CTF_7SlR.js  OnboardingWizard-CYmVScjr.js  OnboardingWizard-CZDtgj6a.js  OnboardingWizard-_87RKYsd.js  OnboardingWizard-n5NzLAaC.js  OnboardingWizard-sCXqzibc.js  element-plus-BLSHxUUb.js  (+47 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+86 files in other folders)
