[package]
name = "relaybox_desktop"
version = "0.1.0"
description = "RelayBox macOS desktop app"
authors = ["zhangyang"]
license = "UNLICENSED"
repository = "https://github.com/Gary-zy/ClashRelay"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "relaybox_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
arboard = "3.6.1"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls"] }
rfd = "0.15.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1.48.0", features = ["net", "time"] }
